--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@
     src: url('fonts/HV_Florentino_Regular.ttf') format('truetype');
 
 }
+body
+{
+margin: 0;
+  overflow: hidden; 
+  height: 100vh;
+}
+
 
 .header {
     min-height: 100vh;
@@ -14,11 +21,13 @@
     position: relative;
 }
 
+
 nav {
     display: flex;
-    padding: 2% 6%;
-    justify-content: space-evenly;
+    padding: 0% 6%;
+    justify-content: space-between;
     align-items: center;
+    text-align: center;
 
 }
 
@@ -28,28 +37,54 @@ nav {
     height: 50px;
 }
     */
-.nav-links {
-    text-align: center;
-    flex: 1;
-}
 
-.nav-links ul li {
-    list-style: none;
-    display: ;
-    padding: 20px 80px;
+
+/* Text and Spacing of the navbar */
+.nav-left ul li {
+    display: inline-block;
+    padding: 2px 60px;
     position: double;
 }
 
-.nav-links ul li a {
-    color: black ;
+.nav-left ul li a {
+    color: black;
     text-decoration: none;
-    font-size: 16px;
-    font-family: 'GoogleSans-Regular', sans-serif;
+    font-size: 18px;
+    font-family: 'HVFlorentino', sans-serif;
 
 
 }
 
-.nav-links ul li::after {
+
+.nav-right ul li {
+    display: inline-block;
+    padding: 2px 60px;
+    position: double;
+}
+
+.nav-right ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'HVFlorentino', serif;
+
+
+}
+/* Logo */ 
+.title a {
+    display: inline;
+    padding: 2px 6px;
+    position: double;
+    color: black;
+    font-size: 23px;
+    font-family: 'HVFlorentino', serif;
+    text-decoration: none;
+
+}
+
+
+/* Animations of the navbar */
+.nav-left ul li::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -60,8 +95,33 @@ nav {
 
 }
 
-.nav-links ul li:hover::after {
+.nav-left ul li:hover::after {
 
     width: 100%;
 
+}
+
+.nav-right ul li::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+
+}
+
+.nav-right ul li:hover::after {
+
+    width: 100%;
+
+}
+
+.image-one img
+{
+    width :40%;
+    padding-top: 100px;
+    padding-left: 100px;
+    height : 70%;
 }
