--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,22 @@
 @font-face {
     font-family: 'HVFlorentino';
     src: url('fonts/HV_Florentino_Regular.ttf') format('truetype');
-
+}
+@font-face {
+    font-family: 'Gluster';
+    src: url('fonts/gluster.ttf') format('truetype');
 }
 body
 {
-margin: 0;
-  overflow: hidden; 
+  margin: 0;
   height: 100vh;
+  overflow:hidden;
 }
 
 
 .header {
-    min-height: 100vh;
-    width: 100%;
-    background: url('2.jpg');
 
+    width: 100%;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -54,7 +55,6 @@ nav {
 
 
 }
-
 
 .nav-right ul li {
     display: inline-block;
@@ -121,7 +121,60 @@ nav {
 .image-one img
 {
     width :40%;
-    padding-top: 100px;
+    padding-top: 70px;
     padding-left: 100px;
     height : 70%;
+    border-radius : 60px;
+}
+.text-stack p
+{
+    top : 50%;
+    left: 35%;
+    right : 0%;
+    position: absolute;
+    color: black;
+    font-size: 80px;
+    font-family: 'Gluster', serif;
+    text-decoration: none;
+}
+
+.line hr
+{
+    width : 80%;
+    border : 1px solid black;
+    position: absolute;
+    top : 105%;
+    left : 10%;
+}
+.image-two img
+{
+
+        vertical-align: middle;
+        margin-right: 10px; 
+        margin-left: 70px;
+        margin-top: 170px;
+        width: 250px;
+        height: 500px; 
+
+}
+.image-three img
+{
+    height : 20%;
+    border-radius : 30px;
+    position : absolute;
+    top : 50%;
+    left: 15%;
+    right : 0%;
+
+}
+.text-two p
+{
+    top : 30%;
+    left: 35%;
+    right : 0%;
+    position: absolute;
+    color: rgba(0, 0, 0, 0.51);
+    font-size: 200px;
+    font-family: 'Gluster', serif;
+    text-decoration: none;
 }
