--- a/styles.css
+++ b/styles.css
@@ -249,4 +249,40 @@ nav {
     height: 18px;
   }
   
+  /* Scroll down */
+  .box {
+    position: absolute;
+    top: 120%;
+    right: 0%;
+    left: 95%;
+    transform: translate(-50%,-50%);
+  }
+
+  .box span {
+    display: block;
+    width: 20px;
+    height: 16px;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    transform: rotate(45deg);
+    margin: -10px;
+  }
+
+  .box1 {
+    position: absolute;
+    top: 120%;
+    right: 40%;
+    left: 25%;
+    transform: translate(-50%,-50%);
+  }
+
+  .box1 span {
+    display: block;
+    width: 20px;
+    height: 16px;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+    transform: rotate(45deg);
+    margin: -10px;
+  }
   
