--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ nav {
     margin-right: 10px;
     margin-left: 70px;
     margin-top: 170px;
-    width: 250px;
+    width: 450px;
     height: 500px;
 
 }
@@ -169,7 +169,7 @@ nav {
 }
 
 .text-two p {
-    top: 30%;
+    top: 40%;
     left: 35%;
     right: 0%;
     position: absolute;
@@ -177,4 +177,17 @@ nav {
     font-size: 200px;
     font-family: 'Gluster', serif;
     text-decoration: none;
+}
+
+.about-text h1
+{
+    top: -25%;
+    left: 0%;
+    right: 0%;
+    position: absolute;
+    color: rgb(0, 0, 0);
+    font-size: 160px;
+    font-family: 'HVFlorentino', serif;
+    text-decoration: none;
+    font-weight: lighter;
 }
